Fix spacing within items
Prepare fixed gaps between items in info section, using fixed image box

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header,
 }
 
 header {
-    padding-top: 12px;
+    padding-top: 18px;
     padding-bottom: 12px;
     display: flex;
     gap: 24px;
@@ -81,7 +81,7 @@ header {
 }
 
 .heroimage {
-    background-color: lightgray; /*Placeholder*/
+    background-color: #6d747d; /*Placeholder*/
     width: 350px;
     height: 150px;
 }
@@ -108,20 +108,24 @@ button.signup {
 
 .infoitems {
     display: flex;
-    justify-content: space-around;
-    gap: 24px;
+    justify-content: center;
+    gap: 46px;
 }
 
 .infoitem {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 0;
+    gap: 8px;
 }
 
 .infoimage {
-    width: 136px;
-    height: 136px;
-    background-color: lightgray;
+    width: 144px;
+    height: 144px;
+    background-color: #FFFFFF;
+    border: 4px solid #3882F6;
+    border-radius: 12px;
 }
 
 .infosubtext {
